# Digicam2000

./: .gitignore  LICENSE  README.md  digicam2000.py  pyproject.toml
docs/: make_cli_svg.py
examples/: CREDITS.md  make_examples.sh
test/: run.sh
